# Caffe2Windows

./: .gitignore  .sconsign.dblite  Blob.cpp  Blob.hpp  CMakeLists.txt  HandWritingDigitsRecognitionSystem.cpp  HandWritingDigitsRecognitionSystem.h  README.md  RedPixelsClassifier.hpp  RedPixelsExtractor.cpp  RedPixelsExtractor.hpp  SConstruct  binarizator.hpp  boxDetector.hpp  caffe.pb.cc  caffe.pb.h  classifier_of_2_features.hpp  configure_x64.cmd  configure_x86.cmd  lenet_FINETUNE.caffemodel  lenet_train.prototxt  lenet_train_leveldb.prototxt  readCaffeModel.cpp  redPixelDetector.hpp  tools_classifier.cpp  tools_classifier.hpp  util.cpp  util.hpp
Binarizator/: adaptive_threshold.hpp
Boxdetector/: line_box_detector.cpp  line_box_detector.hpp
Caffe2Windows/Caffe2Windows.xcodeproj/: project.pbxproj
Caffe2Windows/Caffe2Windows.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Caffe2Windows/Caffe2Windows.xcodeproj/project.xcworkspace/xcuserdata/JohnHush.xcuserdatad/: UserInterfaceState.xcuserstate
Caffe2Windows/Caffe2Windows.xcodeproj/xcuserdata/JohnHush.xcuserdatad/xcschemes/: Caffe2Windows.xcscheme  xcschememanagement.plist
Classifier/: Mixed_Gaussian_Classifier.cpp  Mixed_Gaussian_Classifier.hpp
RedPixelDetector/: mixed_gaussian_rpd.cpp  mixed_gaussian_rpd.hpp
finetune_data_withoutBOX/finetune_testing_data/: data.mdb  lock.mdb
finetune_data_withoutBOX/finetune_training_data/: data.mdb  lock.mdb
src/: CMakeLists.txt  HandWritingDigitsRecognitionSystem.cpp  HandWritingDigitsRecognitionSystem.h  MAINENTRY.cpp  binarizator.hpp  boxDetector.hpp  caffe.pb.cc  classifier_of_2_features.hpp  config.hpp  lenet_iter_10000.caffemodel  lenet_iter_200.caffemodel  test_dll.cpp  tools_classifier.cpp  tools_classifier.hpp  util.cpp  util.hpp  util_caffe.cpp  util_caffe.hpp
src/Binarizator/: adaptive_threshold.cpp  adaptive_threshold.hpp
src/Boxdetector/: line_box_detector.cpp  line_box_detector.hpp
src/Classifier/: Mixed_Gaussian_Classifier.hpp
src/caffe/proto/: caffe.pb.cc  caffe.pb.h
src/tools/: convert_data_written_by_fengchejiaoyu.cpp
test/: CMakeLists.txt  MAINENTRY_backup.cpp  test_OCRAPI_looksLikeNumber.cpp  test_addData_windows.cpp  test_caffe_train.cpp  test_dll.cpp  test_finetune_with_WINDOWS_labeled_data.cpp  test_finetune_with_base_db.cpp  test_leveldb_read_write.cpp  test_merge_data_split_finetune.cpp  test_predict_using_caffe.cpp  test_rotate_training_data_and_finetune.cpp  test_train_adding_data_2leveldb.cpp
tools/: .sconsign.dblite  CMakeLists.txt  convert_data_written_by_fengchejiaoyu.cpp  execution  tools_convert_data_by_teachers.cpp  tools_convert_mnist_data.cpp  tools_filter_with_Gaussian_kernel.cpp  tools_finetune.cpp
